--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-    <meta http-equiv="refresh" content="0; url=https://bitnami-labs.github.io/sealed-secrets/index.yaml">
+    <meta http-equiv="refresh" content="0; url=https://eoepca.github.io/helm-charts-dev/index.yaml">
 </head>
-<p><a href="https://bitnami-labs.github.io/sealed-secrets/index.yaml">Redirect to repo index.yaml</a></p>
+<p><a href="https://eoepca.github.io/helm-charts-dev/index.yaml">Redirect to repo index.yaml</a></p>
 </html>
